--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,22 @@
 runtime: nodejs18
  
 handlers:
-- url: /
+- url: /favicon\.png
+  static_files: favicon.png
+  upload: favicon\.png
+ 
+- url: /src/images
+  static_dir: src/images
+ 
+- url: /src/scripts
+  static_dir: src/scripts
+ 
+- url: /src/styles
+  static_dir: src/styles
+ 
+- url: /.*
   static_files: index.html
   upload: index.html
  
 - url: /(.*)
-  static_files:  |
-    styles/index.css
-    scripts/app.js
-    images/\1
-  
-  upload: www/(.*)
+  script: auto
